# workout_tracker_REST_API

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: abec87828f11_add_refresh_tokens.py  bf4dfc43b80b_create_users_table.py
app/: dependencies.py  main.py
app/core/: config.py  security.py
app/db/: database.py
app/models/: refresh_token.py  user.py
app/routers/: auth.py
app/schemas/: auth.py
app/services/: auth.py
scripts/: test.sh
tests/: conftest.py
tests/integration/auth/: test_login.py  test_logout.py  test_refresh.py  test_register.py
